Fix scroller on mobile

--- a/src/app/countries/page.module.css
+++ b/src/app/countries/page.module.css
@@ -35,8 +35,8 @@
 }
 
 .vertical_content {
-  width: 200px;
-  height: 355;
+  width: 260px;
+  height: 462px;
   object-fit: cover;
 }
 
