--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -258,7 +258,7 @@ a {
 }
 
 .scroller_item {
-  flex: 0 0 200px;
+  flex: 0 0 260px;
   text-align: center;
 }
 
